<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/current_trip"
            android:icon="@drawable/ic_navigation"
            android:title="@string/Current_trip" />
        <item
            android:icon="@drawable/ic_delivery_truck"
            android:title="@string/trips"
            android:visible="false" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_logistics_delivery_truck_and_clock"
            android:title="@string/trips"
            android:visible="false" />
        <item
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/profile"
            android:visible="false" />
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/ic_logistics_delivery_truck_and_clock"
            android:title="@string/earnings" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />

    </group>


</menu>
