<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_8"
    android:fitsSystemWindows="true"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layoutAnimation="@anim/layout_anim_climb_up">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8"
            android:text="@string/change_pin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_24"
            android:layout_margin="@dimen/margin_8"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8">

            <EditText
                android:id="@+id/old_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pin"
                android:background="@drawable/rounded_rect_solid_white"
                android:inputType="numberPassword"
                android:padding="@dimen/padding_8"
                android:maxLength="6"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8">

            <EditText
                android:id="@+id/new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pin"
                android:background="@drawable/rounded_rect_solid_white"
                android:inputType="numberPassword"
                android:padding="@dimen/padding_8"
                android:maxLength="6"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8">

            <EditText
                android:id="@+id/confirm_new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_pin"
                android:background="@drawable/rounded_rect_solid_white"
                android:inputType="numberPassword"
                android:padding="@dimen/padding_8"
                android:maxLength="6"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_rect_blue" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_rect_blue" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:layout_below="@id/submit_btn"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_rect_negative_button_bg" />
        </RelativeLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>