<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_4"
    android:animateLayoutChanges="true"
    android:padding="@dimen/padding_4">

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="@dimen/std_img_size"
        android:layout_height="@dimen/std_img_size"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_4"
        android:background="@color/colorAccent"
        />

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_toEndOf="@id/iv_product_image"
        android:text="@string/haldirams"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_order_items_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_time"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_toEndOf="@id/iv_product_image"
        android:text="@string/daily_gulb_jamun"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/tv_order_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_items_name"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_toEndOf="@id/iv_product_image"
        android:text="@string/_70_inr"
        android:textSize="@dimen/text_16" />




</RelativeLayout>