<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:id="@+id/history_data_layout"
    android:background="@android:color/white"
    tools:context=".v1.fragments.ProfileFragment">

    <TextView
        android:id="@+id/retailer_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_4"
        android:text="@string/retailer"
        android:textSize="@dimen/text_14"
        android:visibility="gone"
        android:paddingStart="@dimen/padding_8" />

    <TextView
        android:id="@+id/retailer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/image_view"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/john_doe"
        android:layout_marginTop="@dimen/margin_16"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_24"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_56"
        android:background="@drawable/rounded_rect_blue"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person_white_24dp" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/logout"
        android:visibility="gone"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/reset_pin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_36"
        android:layout_margin="@dimen/margin_16"
        android:background="@drawable/rounded_rect_blue"
        android:text="@string/changePin"
        android:padding="@dimen/padding_8"
        android:layout_alignParentStart="true"
        android:layout_below="@id/detailsLayout"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/update_profile"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_36"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/rounded_rect_blue"
        android:text="@string/update_profile"
        android:padding="@dimen/padding_8"
        android:layout_alignParentStart="true"
        android:layout_below="@id/reset_pin"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/detailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/retailer_name"
        android:layout_marginTop="@dimen/margin_8">

        <TextView
            android:id="@+id/storeNamertv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:padding="@dimen/padding_4"
            android:text="@string/License"
            android:textAlignment="viewStart"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/storeNameValueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/storeNamertv"
            android:layout_marginStart="@dimen/margin_16"
            android:alpha="0.7"
            android:paddingStart="@dimen/padding_8"
            android:text="@string/mobilenumber"
            android:textAlignment="viewStart"

            android:textSize="@dimen/text_14" />


        <TextView
            android:id="@+id/mobileNummbertv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/storeNameValueTv"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:padding="@dimen/padding_4"
            android:text="@string/mobilenumber"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mobileNumberValueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileNummbertv"
            android:layout_marginStart="@dimen/margin_16"
            android:alpha="0.7"
            android:paddingStart="@dimen/padding_8"
            android:text="@string/mobilenumber"
            android:textAlignment="viewStart"

            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/Addresstv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileNumberValueTv"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:padding="@dimen/padding_4"
            android:text="Region"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressValueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Addresstv"
            android:layout_marginStart="@dimen/margin_16"
            android:alpha="0.7"
            android:paddingStart="@dimen/padding_8"
            android:text="@string/TOda"
            android:textAlignment="viewStart"

            android:textSize="@dimen/text_14"
            android:visibility="visible" />

        <TextView
            android:id="@+id/VehicleNotv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressValueTv"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:padding="@dimen/padding_4"
            android:text="@string/vehicleNumber"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/vehicleNoValueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/VehicleNotv"
            android:layout_marginStart="@dimen/margin_16"
            android:alpha="0.7"
            android:padding="@dimen/padding_4"
            android:text="@string/mobilenumber"
            android:textAlignment="viewStart"

            android:textSize="@dimen/text_14"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:clipChildren="false"
        android:visibility="gone">


    </RelativeLayout>

</RelativeLayout>